--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -38,6 +38,8 @@
 //   }
 // }
 
+
+
 $main-color: #1e91b4;
 
 #primary{
@@ -96,5 +98,13 @@ $main-color: #1e91b4;
     }
   }
 }
+
+.background-trans {
+  background-color: rgba(255,255,255,.5);
+}
+
+.active {
+    border-bottom:3px #FFF solid;
+    }
 
 @import "tailwindcss/utilities";
