--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:200,400,700);/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+@import url(https://use.typekit.net/lln4snf.css);@import url(https://fonts.googleapis.com/css?family=Open+Sans:200,400,700);@import url(https://fonts.googleapis.com/css?family=Roboto&display=swap);/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
    ========================================================================== */
@@ -563,7 +563,7 @@ pre,
 code,
 kbd,
 samp {
-  font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: SFMono-Regular, Menlo;
 }
 
 /**
@@ -634,7 +634,6 @@ video {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   border-radius: 0.5rem;
-  font-size: 0.875rem;
   text-transform: uppercase;
   letter-spacing: 0.05em;
   font-weight: 600;
@@ -4113,15 +4112,19 @@ video {
 }
 
 .font-sans{
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Roboto, "Open+Sans", -apple-system, BlinkMacSystemFont;
 }
 
 .font-serif{
-  font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+  font-family: Georgia, Cambria;
 }
 
 .font-mono{
-  font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: SFMono-Regular, Menlo;
+}
+
+.font-myriad{
+  font-family: myriad-pro, sans-serif;
 }
 
 .font-hairline{
@@ -15300,15 +15303,19 @@ video {
   }
 
   .sm\:font-sans{
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: Roboto, "Open+Sans", -apple-system, BlinkMacSystemFont;
   }
 
   .sm\:font-serif{
-    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+    font-family: Georgia, Cambria;
   }
 
   .sm\:font-mono{
-    font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    font-family: SFMono-Regular, Menlo;
+  }
+
+  .sm\:font-myriad{
+    font-family: myriad-pro, sans-serif;
   }
 
   .sm\:font-hairline{
@@ -26488,15 +26495,19 @@ video {
   }
 
   .md\:font-sans{
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: Roboto, "Open+Sans", -apple-system, BlinkMacSystemFont;
   }
 
   .md\:font-serif{
-    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+    font-family: Georgia, Cambria;
   }
 
   .md\:font-mono{
-    font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    font-family: SFMono-Regular, Menlo;
+  }
+
+  .md\:font-myriad{
+    font-family: myriad-pro, sans-serif;
   }
 
   .md\:font-hairline{
@@ -37676,15 +37687,19 @@ video {
   }
 
   .lg\:font-sans{
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: Roboto, "Open+Sans", -apple-system, BlinkMacSystemFont;
   }
 
   .lg\:font-serif{
-    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+    font-family: Georgia, Cambria;
   }
 
   .lg\:font-mono{
-    font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    font-family: SFMono-Regular, Menlo;
+  }
+
+  .lg\:font-myriad{
+    font-family: myriad-pro, sans-serif;
   }
 
   .lg\:font-hairline{
@@ -48864,15 +48879,19 @@ video {
   }
 
   .xl\:font-sans{
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: Roboto, "Open+Sans", -apple-system, BlinkMacSystemFont;
   }
 
   .xl\:font-serif{
-    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+    font-family: Georgia, Cambria;
   }
 
   .xl\:font-mono{
-    font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    font-family: SFMono-Regular, Menlo;
+  }
+
+  .xl\:font-myriad{
+    font-family: myriad-pro, sans-serif;
   }
 
   .xl\:font-hairline{
