--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -109,4 +109,8 @@ $main-color: #1e91b4;
     border-bottom:3px #FFF solid;
     }
 
+// html, body {
+//   height: 100%;
+// }
+
 @import "tailwindcss/utilities";
