--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -121,8 +121,13 @@ $main-color: #1e91b4;
   background-color: rgba(255,255,255,.5);
 }
 
-.active {
-    border-bottom:3px #FFF solid;
+#nav .active {
+    // color:        #4f81bd;
+    background-color:#87398a;
+    padding: 4px;
+    margin-bottom: 2px;
+    border-radius: 5px;
+
     }
 
 .zoom {
