refactor headings & sendfiles

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -122,10 +122,10 @@ $main-color: #0c4152;
 }
 
 #nav .active {
-    // color:        #4f81bd;
+//     // color:        #4f81bd;
     background-color:#87398a;
-    padding: 4px;
-    margin-bottom: 2px;
+//     padding: 4px;
+    // margin-bottom: 2px;
     border-radius: 5px;
 
     }
