remove vue2-google-maps

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11738,6 +11738,10 @@ footer {
   width: 16rem;
 }
 
+.w-96{
+  width: 24rem;
+}
+
 .w-auto{
   width: auto;
 }
@@ -22867,6 +22871,10 @@ footer {
 
   .sm\:w-64{
     width: 16rem;
+  }
+
+  .sm\:w-96{
+    width: 24rem;
   }
 
   .sm\:w-auto{
@@ -34001,6 +34009,10 @@ footer {
     width: 16rem;
   }
 
+  .md\:w-96{
+    width: 24rem;
+  }
+
   .md\:w-auto{
     width: auto;
   }
@@ -45133,6 +45145,10 @@ footer {
     width: 16rem;
   }
 
+  .lg\:w-96{
+    width: 24rem;
+  }
+
   .lg\:w-auto{
     width: auto;
   }
@@ -56263,6 +56279,10 @@ footer {
 
   .xl\:w-64{
     width: 16rem;
+  }
+
+  .xl\:w-96{
+    width: 24rem;
   }
 
   .xl\:w-auto{
