Home pg mx-auto on bldg & refactor form validation

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -152,5 +152,8 @@ $main-color: #0c4152;
   white-space: normal;
 }
 
+// .error {
+//     border: 1px solid red;
+//   }
 
 @import "tailwindcss/utilities";
