refactor and add contactus email

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -156,4 +156,8 @@ $main-color: #0c4152;
 //     border: 1px solid red;
 //   }
 
+// .background {
+//   background-color: rgb(236, 11, 11);
+// }
+
 @import "tailwindcss/utilities";
